// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SignUp /> check signup screen renders correctly 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "height": "100%",
      "justifyContent": "space-around",
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "bottom": 0,
      }
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "backgroundColor": "#F2F0F0",
          "height": "100%",
          "width": "100%",
        }
      }
    >
      <View>
        <View
          accessibilityIgnoresInvertColors={true}
          style={
            Object {
              "height": 250,
              "resizeMode": "cover",
              "width": "100%",
            }
          }
        >
          <Image
            resizeMode="cover"
            source={1}
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "height": 250,
                  "width": "100%",
                },
                undefined,
              ]
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "rgba(0,0,0,0.3)",
                "height": "100%",
                "justifyContent": "center",
                "paddingLeft": 50,
                "paddingRight": 50,
                "width": "100%",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "white",
                  "fontSize": 40,
                  "fontWeight": "bold",
                }
              }
            >
              Join our tribe.
            </Text>
            <Text
              style={
                Object {
                  "color": "white",
                  "fontSize": 20,
                }
              }
            >
              Start taking control of your household.
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "backgroundColor": "#F2F0F0",
              "height": 784,
              "padding": 50,
              "width": "100%",
            }
          }
        >
          <Text
            style={
              Object {
                "fontSize": 24,
                "fontWeight": "bold",
                "marginBottom": 50,
              }
            }
          >
            Sign Up
          </Text>
          <Text
            style={
              Object {
                "marginBottom": 10,
              }
            }
          >
            Your name
          </Text>
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            rejectResponderTermination={true}
            style={
              Object {
                "backgroundColor": "white",
                "borderRadius": 5,
                "height": 40,
                "marginBottom": 30,
                "paddingLeft": 10,
                "paddingRight": 10,
                "width": "100%",
              }
            }
            testID="textInput"
            underlineColorAndroid="transparent"
          />
          <Text
            style={
              Object {
                "marginBottom": 10,
              }
            }
          >
            Email
          </Text>
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            rejectResponderTermination={true}
            style={
              Object {
                "backgroundColor": "white",
                "borderRadius": 5,
                "height": 40,
                "marginBottom": 30,
                "paddingLeft": 10,
                "paddingRight": 10,
                "width": "100%",
              }
            }
            underlineColorAndroid="transparent"
          />
          <Text
            secureTextEntry={true}
            style={
              Object {
                "marginBottom": 10,
              }
            }
          >
            Password
          </Text>
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            rejectResponderTermination={true}
            secureTextEntry={true}
            style={
              Object {
                "backgroundColor": "white",
                "borderRadius": 5,
                "height": 40,
                "marginBottom": 30,
                "paddingLeft": 10,
                "paddingRight": 10,
                "width": "100%",
              }
            }
            underlineColorAndroid="transparent"
          />
          <Text
            style={
              Object {
                "marginBottom": 10,
              }
            }
          >
            Confirm password
          </Text>
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            rejectResponderTermination={true}
            secureTextEntry={true}
            style={
              Object {
                "backgroundColor": "white",
                "borderRadius": 5,
                "height": 40,
                "marginBottom": 30,
                "paddingLeft": 10,
                "paddingRight": 10,
                "width": "100%",
              }
            }
            underlineColorAndroid="transparent"
          />
          <Text
            style={
              Object {
                "color": "black",
                "marginBottom": 10,
                "textAlign": "center",
              }
            }
          >
            
          </Text>
          <View
            style={
              Object {
                "alignItems": "flex-end",
                "fontSize": 20,
                "fontWeight": "bold",
                "marginTop": 30,
                "width": "100%",
              }
            }
          >
            <View
              accessibilityRole="button"
              accessibilityState={Object {}}
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {},
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#007AFF",
                        "fontSize": 18,
                        "margin": 8,
                        "textAlign": "center",
                      },
                      Object {
                        "color": "#FEB800",
                      },
                    ]
                  }
                >
                  continue
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`check signup screen renders correctly 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "height": "100%",
      "justifyContent": "space-around",
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "bottom": 0,
      }
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "backgroundColor": "#F2F0F0",
          "height": "100%",
          "width": "100%",
        }
      }
    >
      <View>
        <View
          accessibilityIgnoresInvertColors={true}
          style={
            Object {
              "height": 250,
              "resizeMode": "cover",
              "width": "100%",
            }
          }
        >
          <Image
            resizeMode="cover"
            source={1}
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "height": 250,
                  "width": "100%",
                },
                undefined,
              ]
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "rgba(0,0,0,0.3)",
                "height": "100%",
                "justifyContent": "center",
                "paddingLeft": 50,
                "paddingRight": 50,
                "width": "100%",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "white",
                  "fontSize": 40,
                  "fontWeight": "bold",
                }
              }
            >
              Join our tribe.
            </Text>
            <Text
              style={
                Object {
                  "color": "white",
                  "fontSize": 20,
                }
              }
            >
              Start taking control of your household.
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "backgroundColor": "#F2F0F0",
              "height": 784,
              "padding": 50,
              "width": "100%",
            }
          }
        >
          <Text
            style={
              Object {
                "fontSize": 24,
                "fontWeight": "bold",
                "marginBottom": 50,
              }
            }
          >
            Sign Up
          </Text>
          <Text
            style={
              Object {
                "marginBottom": 10,
              }
            }
          >
            Your name
          </Text>
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            rejectResponderTermination={true}
            style={
              Object {
                "backgroundColor": "white",
                "borderRadius": 5,
                "height": 40,
                "marginBottom": 30,
                "paddingLeft": 10,
                "paddingRight": 10,
                "width": "100%",
              }
            }
            testID="textInput"
            underlineColorAndroid="transparent"
          />
          <Text
            style={
              Object {
                "marginBottom": 10,
              }
            }
          >
            Email
          </Text>
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            rejectResponderTermination={true}
            style={
              Object {
                "backgroundColor": "white",
                "borderRadius": 5,
                "height": 40,
                "marginBottom": 30,
                "paddingLeft": 10,
                "paddingRight": 10,
                "width": "100%",
              }
            }
            underlineColorAndroid="transparent"
          />
          <Text
            secureTextEntry={true}
            style={
              Object {
                "marginBottom": 10,
              }
            }
          >
            Password
          </Text>
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            rejectResponderTermination={true}
            secureTextEntry={true}
            style={
              Object {
                "backgroundColor": "white",
                "borderRadius": 5,
                "height": 40,
                "marginBottom": 30,
                "paddingLeft": 10,
                "paddingRight": 10,
                "width": "100%",
              }
            }
            underlineColorAndroid="transparent"
          />
          <Text
            style={
              Object {
                "marginBottom": 10,
              }
            }
          >
            Confirm password
          </Text>
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            rejectResponderTermination={true}
            secureTextEntry={true}
            style={
              Object {
                "backgroundColor": "white",
                "borderRadius": 5,
                "height": 40,
                "marginBottom": 30,
                "paddingLeft": 10,
                "paddingRight": 10,
                "width": "100%",
              }
            }
            underlineColorAndroid="transparent"
          />
          <Text
            style={
              Object {
                "color": "black",
                "marginBottom": 10,
                "textAlign": "center",
              }
            }
          >
            
          </Text>
          <View
            style={
              Object {
                "alignItems": "flex-end",
                "fontSize": 20,
                "fontWeight": "bold",
                "marginTop": 30,
                "width": "100%",
              }
            }
          >
            <View
              accessibilityRole="button"
              accessibilityState={Object {}}
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID="signUpButton"
            >
              <View
                style={
                  Array [
                    Object {},
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#007AFF",
                        "fontSize": 18,
                        "margin": 8,
                        "textAlign": "center",
                      },
                      Object {
                        "color": "#FEB800",
                      },
                    ]
                  }
                >
                  continue
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
